--- a/style/style.css
+++ b/style/style.css
@@ -14,18 +14,19 @@ h1 {
   margin-bottom: 50px;
 }
 
+h2 {
+  margin-bottom: 10px;
+}
+
 form {
-  display: flex;
-  justify-content: space-between;
   border: 2px solid lightcoral;
-  padding: 30px;
 }
 
 label {
   padding: 0 30px;
 }
 
-label.parsed-text {
+label.input-text {
   flex-basis: 60%;
 }
 
@@ -41,6 +42,10 @@ textarea {
   border-radius: 2px;
 }
 
+input {
+  width: 100%;
+}
+
 textarea {
   display: block;
   width: 100%;
@@ -53,10 +58,40 @@ textarea:focus {
   border-radius: 2px;
   border-color: transparent;
 }
+
+p {
+  margin-bottom: 20px;
+}
 /* Utilities */
 .container {
   max-width: 1250px;
   margin: 0 auto;
   padding: 10px;
+}
+
+.input-wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding: 30px;
+}
+
+.button-wrapper {
+  margin: 30px 0 20px;
+  text-align: center;
+
+  button {
+    font-size: 1.2rem;
+    margin-right: 50px;
+    padding: 10px 16px;
+    border-radius: 5px;
+  }
+
+  button.btn-sub{
+    background-color: #04bd04;
+  }
+
+  button.btn-sub:hover {
+    background-color: #19ad19;
+  }
 }
 
